--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,18 +15,18 @@ h2 {
 }
 
 h3 {
-  font-size: 22pt;
+  font-size: 18pt;
   font-weight: 700;
 }
 
 h4 {
-  font-size: 22pt;
+  font-size: 18pt;
   color: #717171;
   font-weight: 600;
 }
 
 h5 {
-  font-size: 18pt;
+  font-size: 16pt;
   font-weight: 600;
 }
 
@@ -85,20 +85,121 @@ h5 {
   font-weight: 700;
 }
 
+.ratingContainer {
+  height: 60px;
+  width: 60px;
+  border-radius: 100px;
+
+  position: relative
+}
+
 .rating {
+  
   font-size: 36pt;
   font-weight: 800;
 
   height: 60px;
   width: 60px;
-
+  border-radius: 100px;
   
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
 
+}
+
+.editRatingButton {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  height: 100%;
+  width: 100%;
+  margin: 0;
   border-radius: 100px;
+
+  background-color: rgba(33, 33, 33, 0.6);
+  border: 0;
+
+  font-size: 10pt;
+  color: #fff;
+  font-weight: 600;
+  text-decoration: underline;
+
+  opacity: 0%
+}
+
+.editRatingButton:hover {
+  opacity: 100%;
+}
+
+.editRatingModal {
+  position: fixed;
+  left: 240px;
+  background-color: #fff;
+  padding: 20px;
+
+  border: 1px solid rgba(80, 80, 80, 0.2);
+  border-radius: 4px;
+
+  z-index: 2;
+}
+
+.ratingButtons {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.ratingButtons * {
+  font-size: 28pt;
+  font-weight: 800;
+
+  height: 60px;
+  width: 60px;
+  border-radius: 100px;
+
+  color: #fff;
+  background-color: #D9D9D9;
+
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+button {
+  border: 0
+}
+
+.pillButton {
+  background-color: #2680FF;
+  color: #fff;
+
+  font-size: 12pt;
+  font-weight: 700;
+
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 4px;
+  padding-bottom: 4px; 
+
+  border-radius: 20px;
 }
 
 .oneRate {
