--- a/client/src/App.css
+++ b/client/src/App.css
@@ -268,3 +268,17 @@ button {
 .hover:hover {
   text-decoration: underline;
 }
+
+.search-bar {
+  height: 40px;
+  width: 100%;
+
+  font-size: 12pt;
+  color: #6a6a6a;
+
+  padding-left: 16px;
+  
+  border: solid rgba(217, 217, 217, 0.5);
+
+  border-radius: 4px;
+}
