--- a/client/src/elements/Auth/Auth.css
+++ b/client/src/elements/Auth/Auth.css
@@ -1,3 +1,19 @@
+.auth-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.auth-page h1, form {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.auth-page h1 {
+    margin-top: 60px;
+    margin-bottom: 20px;
+}
+
 form {
     display: flex;
     flex-direction: column;
