--- a/client/src/App.css
+++ b/client/src/App.css
@@ -352,3 +352,15 @@ a {
   padding-left: 8px;
   margin-bottom: 0;
 }
+
+.link:hover {
+  text-decoration: underline;
+}
+
+.container-hover:hover {
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+.container-hover:hover>.link {
+  text-decoration: underline;
+}
