--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,6 +51,16 @@ h5 {
   background: #fff;
 }
 
+.panel-container {
+  padding: 12px 16px;
+  margin: 12px 0;
+
+  border: rgba(128, 128, 128, 0.2) 1px solid;
+  border-radius: 8px;
+
+  box-shadow: rgba(12, 12, 13, 0.05) 0px 1px 4px;
+}
+
 .h-between {
   display: flex;
   flex-direction: row;
@@ -169,7 +179,7 @@ h5 {
 
 .editRatingModal {
   position: fixed;
-  left: 240px;
+  left: 30%;
   background-color: #fff;
   padding: 20px;
 
@@ -177,6 +187,12 @@ h5 {
   border-radius: 4px;
 
   z-index: 2;
+}
+
+.side-panel .editRatingModal {
+  position: fixed;
+  top: 120px;
+  left: 60px;
 }
 
 .ratingButtons {
@@ -190,11 +206,11 @@ h5 {
 }
 
 .ratingButtons * {
-  font-size: 28pt;
+  font-size: 20pt;
   font-weight: 800;
 
-  height: 60px;
-  width: 60px;
+  height: 44px;
+  width: 44px;
   border-radius: 100px;
 
   color: #fff;
@@ -539,9 +555,9 @@ a {
 .side-panel {
   position: fixed;
   top: 0;
-  right: -400px;
+  right: -600px;
 
-  width: 400px;
+  width: 600px;
   height: 100vh;
 
   background-color: white;
@@ -551,10 +567,12 @@ a {
   padding: 32px 24px;
   transition: transform 0.3s ease-in-out;
   z-index: 1000;
+
+  overflow-y: scroll;
 }
 
 .side-panel.open {
-  transform: translateX(-400px);
+  transform: translateX(-600px);
 
 }
 
