--- a/client/src/App.css
+++ b/client/src/App.css
@@ -493,10 +493,12 @@ a {
 }
 
 .v-scroll {
-  flex-grow: 1;
+  /* flex-grow: 1; */
   /* height: 100%; */
   overflow-y: scroll;
   /* overflow-y: auto; */
+  scrollbar-width: thin;
+  scrollbar-color: rgba(136, 136, 136, 0.5) rgba(0, 0, 0, 0);
 }
 
 .markdown-container {
