--- a/client/src/App.css
+++ b/client/src/App.css
@@ -179,14 +179,17 @@ h5 {
 
 .editRatingModal {
   position: fixed;
-  left: 30%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
   background-color: #fff;
-  padding: 20px;
+  padding: 24px 20px;
 
   border: 1px solid rgba(80, 80, 80, 0.2);
   border-radius: 4px;
 
-  z-index: 2;
+  z-index: 101;
 }
 
 .side-panel .editRatingModal {
@@ -201,8 +204,8 @@ h5 {
   justify-content: center;
   align-items: center;
 
-  margin-top: 16px;
-  margin-bottom: 16px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .ratingButtons * {
@@ -225,10 +228,14 @@ h5 {
   top: 0;
   left: 0;
 
-  width: 100%;
-  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+
+  z-index: 500;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -568,7 +575,7 @@ a {
 
   padding: 32px 24px;
   transition: transform 0.3s ease-in-out;
-  z-index: 1000;
+  z-index: 100;
 
   overflow-y: scroll;
 }
