--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,14 +34,18 @@ h5 {
   display: flex;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
 }
 
 .main {
-  margin: 60px;
-  max-width: calc(100vw - 160px - 120px);
+  padding: 60px 60px;
+  width: calc(100vw - 160px - 120px);
 
   flex-grow: 1;
+
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: rgba(136, 136, 136, 0.5) rgba(0, 0, 0, 0);
+  height: 100vh;
 }
 
 
@@ -69,6 +73,9 @@ h5 {
 }
 
 #navbar {
+  position: sticky;
+  top: 0;
+  left: 0;
   background-color: #fff;
 
   display: flex;
