--- a/client/src/elements/Auth/Auth.css
+++ b/client/src/elements/Auth/Auth.css
@@ -56,7 +56,7 @@ label span {
 
 input {
     height: 32px;
-    margin-top: 2px;
+    /* margin-top: 2px; */
 
     background-color: #F5F5F5;
     border-color: #d9d9d9;
