--- a/client/src/App.css
+++ b/client/src/App.css
@@ -795,8 +795,14 @@ input#filename {
 
 }
 
-.round-history > thead > tr > th {
+.round-history > thead > tr > th{
   font-size: 10pt;
+  font-weight: bold;
+}
+
+.round-history > thead > tr > th > *{
+  font-size: 10pt;
+  font-weight: bold;
 }
 
 .round {
@@ -848,4 +854,22 @@ input#filename {
 
 .theory {
   background-color: rgba(255, 217, 197, 0.6);
+}
+
+.hover-link:hover {
+  text-decoration: underline solid #333;
+}
+
+.round-selectors {
+  font-size: 11pt;
+}
+
+.round-selectors>button {
+  width: 100%;
+  text-align: left;
+  margin: 2px;
+}
+
+.round-selectors>button:hover {
+  background-color: rgba(118, 118, 128, 0.1);
 }
