--- a/client/src/App.css
+++ b/client/src/App.css
@@ -483,7 +483,7 @@ a {
 }
 
 .link:hover {
-  text-decoration: underline;
+  text-decoration: underline #333 1px solid;
 }
 
 .container-hover:hover {
@@ -872,4 +872,46 @@ input#filename {
 
 .round-selectors>button:hover {
   background-color: rgba(118, 118, 128, 0.1);
+}
+
+.search-bar>div {
+  width: 100%;
+}
+
+.search-bar>div>input {
+  height: 100%;
+  border: none;
+  width: 95%;
+  background-color: transparent;
+}
+
+.search-bar>div>input:focus {
+  outline: none;
+}
+
+.search-submit {
+  margin: 0;
+  background-color: #2680FF;
+  color: #fff;
+  padding: 1px 10px;
+
+  border-radius: 20px;
+}
+
+.judge-search-results {
+  display: block;
+  width: 100%;
+  background-color: rgba(256, 256, 256, 0.8);
+  padding: 8px 16px;
+  border-radius: 8px;
+  margin: 8px 0px;
+}
+
+.judge-search-results:hover {
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.judge-search-results:hover>:nth-child(1) {
+  text-decoration: underline #333 solid 1px;
 }
