--- a/client/src/elements/Public/public.css
+++ b/client/src/elements/Public/public.css
@@ -18,4 +18,22 @@
 .top-nav *.active {
     color: #2680FF;
     font-weight: 800;
-  }
+}
+
+.disclaimer {
+    font-weight: 600;
+    margin: 8px 0px 28px 0px;
+
+    display: flex;
+    gap: 4px;
+}
+
+.disclaimer > div {
+    font-weight: 500;
+}
+
+.public-home > div > p > a {
+    color: #2680FF;
+    font-weight: 500;
+    text-decoration: solid underline #2680FF;
+}
